--- a/home.html
+++ b/home.html
@@ -1,16 +1,28 @@
+<div class="home container">
 
-<nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-            <div class="column">
-                <a class="navbar-brand" href="/"><img src="images/finalLogo.png" alt="/home"></a>
-            </div>
-            <div class="columnRight">
-                <a href="/">Log In</a>
-                <a href="/">Shop</a> 
-                <input  type="search" placeholder="Search">
-            </div>
+    <nav class="navbar navbar-expand-lg">
+        <div class="column">
+            <a class="navbar-brand" href="/"><img src="images/favicon.png" alt="/home"></a>
+        </div>
+        <div class="columnRight">
+            <a href="/">Log In</a>
+            <a href="/">Register</a>
+            <a href="/">Shop</a> 
+        </div>
+    </nav>
+
+    <div class="main">
+        <img src="images/sd.jpg" alt="">
     </div>
-</nav>
+    <div class="footer">
+        <div class="footerRow">
+            <div class="credit">
+                <h4>jmckeownwebdev 2021</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
